Added ability to play on click and pause on clicking h1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE>
 <html>
   <head>
-    <link rel="stylesheet" href="./styles/main.css" />
+    <!-- <script src="./node_modules/react-bootstrap/dist/react-bootstrap.min.js" /></script> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="./config/api_keys.js"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.1.js"></script>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
