Got server and webpack running with songs reducer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE>
 <html>
   <head>
-    <!-- <script src="./node_modules/react-bootstrap/dist/react-bootstrap.min.js" /></script> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="./config/api_keys.js"></script>
@@ -13,27 +12,10 @@
     SC.initialize({
       client_id: config.soundcloud_API_key
     });
-
-    // stream track id 293
-    // SC.stream('/tracks/293').then(function(player){
-    //   player.play();
-    // });
-    var track_url = 'http://soundcloud.com/forss/flickermood';
-    $(document).ready(function() {
-      // SC.oEmbed(track_url, { auto_play: false }).then(function(oEmbed) {
-      //   console.log('oEmbed response: ', oEmbed.html);
-      //   $("#player").html(oEmbed.html);
-      // });
-    });
     </script>
     <div id="app">
     </div>
     <div id="player"></div>
-    <script src="./compiled/bundle.js"></script>
-    <script type="text/babel">
-      ReactDOM.render(
-        <App />, document.getElementById('app')
-      );
-    </script>
+    <script src="./static/bundle.js"></script>
   </body>
 </html>
