--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./styles/main.css">
+    <!--<link rel="stylesheet" href="./styles/main.css">-->
     <script src="./config/api_keys.js"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.1.js"></script>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
