Added navbar to emit change genre action

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       client_id: config.soundcloud_API_key
     });
     </script>
-    <div id="app">
+    <div id="root">
     </div>
     <div id="player"></div>
     <script src="./static/bundle.js"></script>
