--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="./styles/main.css">-->
-    <script src="./config/api_keys.js"></script>
+    <!--<script src="./config/api_keys.js"></script>-->
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.1.js"></script>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   </head>
   <body>
-    <script>
+    <!--<script>
     SC.initialize({
       client_id: config.soundcloud_API_key
     });
-    </script>
+    </script>-->
     <div id="root">
     </div>
     <div id="player"></div>
